--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ body{
     padding: 30px;
     box-shadow: 1px 1px 5px lightgrey;
     transition: .3s;
+    border-radius: 5px;
 }
 
 .child-testi:hover{
